--- a/index-jcn.html
+++ b/index-jcn.html
@@ -18,6 +18,7 @@
   <!-- Custom fonts -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
@@ -32,7 +33,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">CleanStar</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
@@ -63,8 +64,8 @@
       <header class="masthead">
         <div class="container">
           <div class="intro-text">
-            <div class="intro-lead-in">Welcome To Our Studio!</div>
-            <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+            <div class="intro-lead-in">Welcome to CleanStar!</div>
+            <div class="intro-heading text-uppercase">Modern methods. Hard work. Sparkling results.</div>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
           </div>
         </div>
@@ -708,7 +709,7 @@
       <script src="js/jqBootstrapValidation.js"></script>
       <script src="js/contact_me.js"></script>
   
-      <!-- Custom scripts for this template -->
+      <!-- Custom scripts   -->
       <script src="js/agency.min.js"></script>
   
     </body>
