--- a/index-jcn.html
+++ b/index-jcn.html
@@ -33,6 +33,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
+          <img src="img/star.png" alt="">
           <a class="navbar-brand js-scroll-trigger" href="#page-top">CleanStar</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -44,7 +45,7 @@
                 <a class="nav-link js-scroll-trigger" href="#services">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                <a class="nav-link js-scroll-trigger" href="#portfolio">Before &amp; After</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#about">About</a>
