Think I'm done for now. Take a look

--- a/index-jcn.html
+++ b/index-jcn.html
@@ -85,25 +85,25 @@
             <div class="col-md-4">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-home fa-stack-1x fa-inverse"></i>
               </span>
-              <h4 class="service-heading">E-Commerce</h4>
+              <h4 class="service-heading">Homes</h4>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-building fa-stack-1x fa-inverse"></i>
               </span>
-              <h4 class="service-heading">Responsive Design</h4>
+              <h4 class="service-heading">Businesses</h4>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-university fa-stack-1x fa-inverse"></i>
               </span>
-              <h4 class="service-heading">Web Security</h4>
+              <h4 class="service-heading">Venues</h4>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
           </div>
@@ -115,7 +115,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading text-uppercase">Portfolio</h2>
+              <h2 class="section-heading text-uppercase">Before &amp; After</h2>
               <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
           </div>
@@ -241,7 +241,7 @@
                   <div class="timeline-panel">
                     <div class="timeline-heading">
                       <h4>March 2011</h4>
-                      <h4 class="subheading">An Agency is Born</h4>
+                      <h4 class="subheading">CleanStar is Born</h4>
                     </div>
                     <div class="timeline-body">
                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -255,7 +255,7 @@
                   <div class="timeline-panel">
                     <div class="timeline-heading">
                       <h4>December 2012</h4>
-                      <h4 class="subheading">Transition to Full Service</h4>
+                      <h4 class="subheading">CleanStar moves to Tennessee</h4>
                     </div>
                     <div class="timeline-body">
                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -269,7 +269,7 @@
                   <div class="timeline-panel">
                     <div class="timeline-heading">
                       <h4>July 2014</h4>
-                      <h4 class="subheading">Phase Two Expansion</h4>
+                      <h4 class="subheading">Future plans</h4>
                     </div>
                     <div class="timeline-body">
                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -294,7 +294,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+              <h2 class="section-heading text-uppercase">Our Wonderful Staff</h2>
               <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
           </div>
@@ -302,8 +302,8 @@
             <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                <h4>Kay Garland</h4>
-                <p class="text-muted">Lead Designer</p>
+                <h4>Lady #1</h4>
+                <p class="text-muted">CEO</p>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
                     <a href="#">
@@ -326,8 +326,8 @@
             <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                <h4>Larry Parker</h4>
-                <p class="text-muted">Lead Marketer</p>
+                <h4>Guy #1</h4>
+                <p class="text-muted">Cleaning Crew Leader</p>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
                     <a href="#">
@@ -350,8 +350,8 @@
             <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                <h4>Diana Pertersen</h4>
-                <p class="text-muted">Lead Developer</p>
+                <h4>Lady #2</h4>
+                <p class="text-muted">Customer Service Specialist</p>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
                     <a href="#">
@@ -458,7 +458,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <span class="copyright">Copyright &copy; Your Website 2017</span>
+              <span class="copyright">Copyright &copy; CleanStar 2017</span>
             </div>
             <div class="col-md-4">
               <ul class="list-inline social-buttons">
